--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<app-details></app-details>
+<div class="row">
+    <div class="col-md-8">
+        Slider 
+    </div>
+    <div class="col-md-4">
+        Fan Favorites
+    </div>
+</div>
+
+<div class="row">
+    
+</div>
