-home page created

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer-content">
-        Srinu   &copy;2024 MagnusMinds. All rights reserved.
+        Srinu   &copy; {{cuurentYear}} MagnusMinds. All rights reserved.
     </div>
   </footer>
   
