--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,143 @@
 <div class="row">
     <div class="col-md-8">
-        Slider 
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner custom-carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://image.tmdb.org/t/p/original/3iYQTLGoy7QnjcUYRJy4YrAgGvp.jpg" width="1000"  class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First Movie </h5>
+                  <p>Some representative  for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://image.tmdb.org/t/p/original/2bXbqYdUdNVa8VIWXVfclP2ICtT.jpg"  width="1000" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second Movie </h5>
+                  <p>Some representative  for the second slide.</p>
+                </div> 
+              </div>
+              <div class="carousel-item">
+                <img src="https://image.tmdb.org/t/p/original/4YZpsylmjHbqeWzjKpUEF8gcLNW.jpgi" width="1000" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third Movie </h5>
+                  <p>Some representative  for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </div>
     <div class="col-md-4">
-        Fan Favorites
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://image.tmdb.org/t/p/original/aosm8NMQ3UyoBVpSxyimorCQykC.jpg" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Venom</h5>
+              <p class="card-text">Eddie and Venom are on the run down on Venom</p>
+              <p class="card-text">
+                <a class="btn btn-warning">
+                  <i class="bi bi-film"></i> Trailer
+                </a>
+              </p>
+              <p class="card-text"><small class="text-body-secondary">Last updated {{ lastUpdated }} ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://image.tmdb.org/t/p/original/1T21FblunT0y8fz7YaW8JMYgUKm.jpg" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Pushpa 2</h5>
+              <p class="card-text">Pushpa struggles to sustain his sandalwood smuggling business.</p>
+              <p class="card-text">
+                <a class="btn btn-warning">
+                  <i class="bi bi-film"></i> Trailer
+                </a>
+              </p>
+              <p class="card-text"><small class="text-body-secondary">Last updated {{ lastUpdated }} ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 </div>
 
 <div class="row">
-    
+     <h1>Fan Favorites</h1>
+     <hr>
+  <div class="col-md-3">
+    <div class="card h5">
+        <img src="https://image.tmdb.org/t/p/original/uQhYBxOVFU6s9agD49FnGHwJqG5.jpg" class="card-image img-fluid rounded-start" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Elevation</h5>
+          <p class="card-text text-body-secondary">Anthony Mackie</p>
+        </div>
+        <div class="card-footer text-center text-muted">
+         <span style="float:left"><i class="bi bi-calendar-fill"></i> 2024</span>
+         <span> <i class="bi bi-star-fill"></i> 5/10</span>
+         <span style="float:right"><i class="bi bi-trophy-fill"></i> 1</span>
+      </div>
+   </div>
+ </div>
+ <div class="col-md-3">
+  <div class="card h5">
+      <img src="https://image.tmdb.org/t/p/original/w46Vw536HwNnEzOa7J24YH9DPRS.jpg" class="card-image img-fluid rounded-start" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">My Fault</h5>
+        <p class="card-text text-body-secondary">Nicole Wallace</p>
+      </div>
+      <div class="card-footer text-center text-muted">
+       <span style="float:left"><i class="bi bi-calendar-fill"></i> 2025</span>
+       <span> <i class="bi bi-star-fill"></i> 8.5/10</span>
+       <span style="float:right"><i class="bi bi-trophy-fill"></i> 3</span>
+    </div>
+ </div>
+</div>
+<div class="col-md-3">
+  <div class="card h5">
+      <img src="https://image.tmdb.org/t/p/original/wIwM0QhjS6BuoB5UrHykZWXOUh6.jpg" class="card-image img-fluid rounded-start" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Deadpool & Wolverine</h5>
+        <p class="card-text text-body-secondary">Ryan Reynolds</p>
+      </div>
+      <div class="card-footer text-center text-muted">
+       <span style="float:left"><i class="bi bi-calendar-fill"></i> 2023</span>
+       <span> <i class="bi bi-star-fill"></i> 7/10</span>
+       <span style="float:right"><i class="bi bi-trophy-fill"></i> 5</span>
+    </div>
+ </div>
+</div>
+<div class="col-md-3">
+  <div class="card h5">
+      <img src="https://image.tmdb.org/t/p/original/cpz0u8sK993MhIQ46xL4l6b40Cg.jpg" class="card-image img-fluid rounded-start" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Gutur Karam</h5>
+        <p class="card-text text-body-secondary">Mahesh Babu</p>
+      </div>
+      <div class="card-footer text-center text-muted">
+       <span style="float:left"><i class="bi bi-calendar-fill"></i> 2024</span>
+       <span> <i class="bi bi-star-fill"></i> 9.5/10</span>
+       <span style="float:right"><i class="bi bi-trophy-fill"></i> 5</span>
+    </div>
+ </div>
+</div>
 </div>
