--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,17 @@
 button {
     background-color: yellow;
 }
+
+
+@media (max-width: 768px) {
+    .example-class {
+      font-size: 14px;
+    }
+  }
+  
+  @media (min-width: 769px) {
+    .example-class {
+      font-size: 18px;
+    }
+  }
+  
