--- a/src/app/components/details-movies/details-movies.component.html
+++ b/src/app/components/details-movies/details-movies.component.html
@@ -1,1 +1,21 @@
-<p>details-movies works!</p>
+
+<div class="col-md-6>">
+    <figure class="figure">
+            <img src="https://image.tmdb.org/t/p/original/1T21FblunT0y8fz7YaW8JMYgUKm.jpg" class="card-image img-fluid rounded-start" alt="...">
+            <figcaption class="figure-caption">Movie #1 </figcaption>
+            <figcaption class="figure-caption"><i class="bi bi-star"></i> <b>9.1/10</b></figcaption>
+     </figure>
+     <figure class="figure">
+            <img src="https://image.tmdb.org/t/p/original/wIwM0QhjS6BuoB5UrHykZWXOUh6.jpg" class="card-image img-fluid rounded-start" alt="...">
+            <figcaption class="figure-caption">Movie #2</figcaption>
+            <figcaption class="figure-caption">(Role)</figcaption>
+     </figure>
+     <figure class="figure">
+            <img src="https://image.tmdb.org/t/p/original/w46Vw536HwNnEzOa7J24YH9DPRS.jpg" class="card-image img-fluid rounded-start" alt="...">
+            <figcaption class="figure-caption">Movie #3</figcaption>
+            <figcaption class="figure-caption">(Role)</figcaption>
+     </figure>
+    </div>
+    
+    
+    
