--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,49 @@
-.custom-carousel-inner img {
-    max-height: 500px; 
-    object-fit:fill;
+
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f9fa;
+  }
+
+  
+  /* Carousel Styling */
+  .custom-carousel-inner img {
+    max-height: 500px;
+    object-fit:initial;
     width:auto;
   }
+  
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+  }
+  
+  .carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    border-radius: 8px;
+  }
+  
+  /* Card Hover Effects */
+  .card:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .btn-warning {
+    background-color: #f0ad4e;
+    border-radius: 20px;
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  .btn-warning:hover {
+    background-color: #e09528;
+  }
+  
+  .card-footer span {
+    display: inline-block;
+  }
+  
