--- a/src/app/components/details-reviews/details-reviews.component.scss
+++ b/src/app/components/details-reviews/details-reviews.component.scss
@@ -1,3 +1,5 @@
+  .accordion {
+   justify-content: center;
   .accordion-header {
     background-color: #9b8f8f;
     border: none;
@@ -17,7 +19,4 @@
   .accordion-body {
     background-color:antiquewhite; 
   } 
-
-  .accordion {
-    width: 1200px;
   }
