--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -17,8 +17,8 @@
           <td>
             <img src="https://image.tmdb.org/t/p/original/1T21FblunT0y8fz7YaW8JMYgUKm.jpg" class="img-thumbnail hover-effect" alt="Movie Cover" width="100">
           </td>
-          <td>Movie #1 Title</td>
-          <td>This is a short description for Movie #1 Title.</td>
+          <td>pushpa</td>
+          <td>This is a short description for Pushpa</td>
           <td class="text-center">
             <a href="#" class="btn btn-warning me-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
               <i class="bi bi-film"></i> Trailer
@@ -32,10 +32,10 @@
         <tr>
           <th scope="row" class="text-center">2</th>
           <td>
-            <img src="https://image.tmdb.org/t/p/original/1T21FblunT0y8fz7YaW8JMYgUKm.jpg" class="img-thumbnail hover-effect" alt="Movie Cover" width="100">
+            <img src="https://image.tmdb.org/t/p/original/cpz0u8sK993MhIQ46xL4l6b40Cg.jpg" class="img-thumbnail hover-effect" alt="Movie Cover" width="100">
           </td>
-          <td>Movie #2 Title</td>
-          <td>This is a short description for Movie #2 Title.</td>
+          <td>Guntur karam</td>
+          <td>This is a short description for Guntur karam</td>
           <td class="text-center">
             <a href="#" class="btn btn-warning me-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
               <i class="bi bi-film"></i> Trailer
@@ -49,10 +49,10 @@
         <tr>
           <th scope="row" class="text-center">3</th>
           <td>
-            <img src="https://image.tmdb.org/t/p/original/1T21FblunT0y8fz7YaW8JMYgUKm.jpg hover-effect" class="img-thumbnail hover-effect" alt="Movie Cover" width="100">
+            <img src="https://image.tmdb.org/t/p/original/w46Vw536HwNnEzOa7J24YH9DPRS.jpg" class="img-thumbnail hover-effect" alt="Movie Cover" width="100">
           </td>
-          <td>Movie #3 Title</td>
-          <td>This is a short description for Movie #3 Title.</td>
+          <td>My Fault</td>
+          <td>This is a short description for My Fault</td>
           <td class="text-center">
             <a href="#" class="btn btn-warning me-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
               <i class="bi bi-film"></i> Trailer
