--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-  <!--Nav Bar-->
+<!--Nav Bar-->
 <app-header></app-header>  
-  
+
 <!--Application Content-->
-  <div class="container">
-    <app-home> </app-home>
-  </div>
- 
-  <!--Footer-->
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<!--Footer-->
 <app-footer></app-footer>
