--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -59,3 +59,14 @@
         padding-bottom: 75%;
     }
 }
+
+.no-trailer-message {
+  background-color: #8b9094;
+  color: #13e270;  
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+}
