--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -44,3 +44,14 @@
     }
 }
 
+.no-trailer-message {
+    background-color: #8b9094;
+    color: #13e270;  
+    font-size: 1.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+  }
+  
