--- a/src/app/components/details-actors/details-actors.component.scss
+++ b/src/app/components/details-actors/details-actors.component.scss
@@ -3,18 +3,19 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 1.5rem;
+      gap: 20px;
       padding: 1rem;
       background-color: transparent;
-    }
+    } 
 
     /* Individual actor card */
     .actor-card {
+      flex: 0 0 calc(20% - 20px);
       text-align: center;
-      background-color: #1c1c1c;
+      background-color: #080808;
       border-radius: 8px;
-      padding: 1rem;
-      width: 150px;
+      padding: 0.5rem;
+      width: 200px;
       transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     }
 
@@ -25,7 +26,7 @@
 
     /* Image styling */
     .actor-image {
-      max-width: 100%;
+      width: 100%;
       height: auto;
       border-radius: 8px;
       margin-bottom: 0.5rem;
@@ -34,13 +35,13 @@
     /* Caption styling */
     .actor-caption {
       color: aliceblue;
-      font-size: 16px;
+      font-size: 1.1rem;
       font-weight: bold;
       margin: 0.25rem 0;
     }
 
     .actor-role {
-      color: #bbb;
+      color: #f1ef4d;
       font-size: 14px;
       font-style: italic;
     }
