--- a/src/app/components/details-reviews/details-reviews.component.html
+++ b/src/app/components/details-reviews/details-reviews.component.html
@@ -1,46 +1,29 @@
-<div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <i class="bi bi-star"></i> <b>7/10</b> - Good
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <p>This is review description</p>
-          <p class="blackquote-footer">Review author</p>
-          <p><i>100 out of 129 found this helpful</i></p>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <i class="bi bi-star"></i> <b>8/10</b> - Very Good
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <p>This is review description</p>
-          <p class="blackquote-footer">Review author</p>
-          <p><i>100 out of 129 found this helpful</i></p>
-        </div>
-      </div>
-      <br>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          <i class="bi bi-star"></i> <b>9/10</b> - Excellent
-        </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <p>This is review description</p>
-          <p class="blackquote-footer">Review author</p>
-          <p><i>100 out of 129 found this helpful</i></p>
-        </div>
+<div *ngIf="reviews.length > 0; else noReviews" class="accordion" id="accordionExample">
+  <div class="accordion-item" *ngFor="let item of reviews; let i = index">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse' + i" aria-expanded="true" [attr.aria-controls]="'collapse' + i">
+        <span>
+          <i class="bi bi-star-fill"></i> &nbsp; <b>{{item.author_details.rating}}/10</b>
+        </span>
+        <span class="ms-auto">
+          Updated At: {{ item.updated_at | date: 'MMM d, yyyy' }}
+        </span>
+      </button>
+    </h2>
+    <div [id]="'collapse' + i" class="accordion-collapse collapse" [ngClass]="{'show': i === activeIndex}" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>{{item.content}}</p>
+        <p class="blockquote-footer">{{item.author}}</p>
+        <p>
+          <img [src]="'https://image.tmdb.org/t/p/w500/' + item.author_details.avatar_path" [alt]="item.name" class="actor-image">
+        </p>
       </div>
     </div>
   </div>
+</div>
+
+<ng-template #noReviews>
+  <div class="text-center">
+    <p class="text-white">No Reviews Available</p>
+  </div>
+</ng-template>
